# star

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  build-vendor.py  build_zipapp.py  install-star.sh  install.sh  pyproject.toml  requirements-optional.txt  run_star.py  star-monolith.py  star.py  star.spec
.github/workflows/: ci.yml  release.yml
docs/: KEYBOARD_AUDIT.md  PACKAGING.md  PERFORMANCE.md  README.md  RELEASING.md  architecture.md  configuration.md  features.md  installation.md  knowledge-graph.md  obsidian.md  plugins-developing.md  usage_guide.md  video-export.md
docs/examples/: README.md
docs/examples/cli/check-dependencies/: README.md  run.py
docs/examples/cli/export-audio/: README.md  run.py  sample.md
docs/examples/cli/extract-text/: README.md  sample.md
docs/examples/cli/list-plugins/: README.md  run.py
docs/examples/cli/list-voices/: README.md  run.py
docs/examples/gui/read-aloud/: README.md
docs/examples/gui/reading-aids/: README.md
docs/examples/gui/write-and-export/: README.md
docs/examples/plugin-template/: README.md  pyproject.toml
docs/examples/plugin-template/star_demo_format/: __init__.py
examples/: README.md
examples/cli/check-dependencies/: README.md
examples/cli/extract-text/: README.md  run.py
examples/cli/list-plugins/: README.md  run.py
examples/gui/read-aloud/: README.md
examples/gui/reading-aids/: README.md
examples/gui/write-and-export/: README.md
star/: BUILD.md  CHANGELOG.md  README.md  __init__.py  __main__.py  _bundled.py  _runtime.py  anki_sync.py  annotations.py  app.py  archive.py  audiobook.py  autodeps.py  braille.py  cache.py  citations.py  convert.py  diagnostics.py  dictionary.py  discovery.py  documents.py  export.py  export_graph.py  feeds.py  flashcards.py  fonts.py  formats.py  fulltext.py  graph.py  gui.py  i18n.py  library.py  markup.py  mathrender.py  ner.py  obsidian.py  pagination.py  plugins.py  render.py  search.py  (+18 more)
star/documents/: __init__.py  dispatch.py  ebook.py  handlers.py  html.py  misc.py  model.py  office.py  pandoc.py  pdf.py  text_loaders.py
star/gui/: __init__.py  _qtcompat.py  a11y.py  deps_dialog.py  graph_view.py  help_window.py  icons.py  main_window.py  mixin_aiddialogs.py  mixin_annotations.py  mixin_authoring.py  mixin_autosave.py  mixin_bookmarks_qt.py  mixin_chrome.py  mixin_citations.py  mixin_commands.py  mixin_display.py  mixin_docops.py  mixin_doctools.py  mixin_document.py  mixin_export.py  mixin_find.py  mixin_fontspacing.py  mixin_graph.py  mixin_highlights.py  mixin_history.py  mixin_navigation.py  mixin_playback.py  mixin_presets.py  mixin_review.py  mixin_toc.py  mixin_tour.py  mixin_transcription.py  mixin_voices.py  preferences.py  runner.py
star/gui/mixin_navigation/: __init__.py  _core.py  _editing.py  _position.py  _speechcursor.py
star/locale/: README.md  ar.json  de.json  es.json  fr.json  pt.json
star/markup/: __init__.py  _regexes.py  asciidoc.py  creole.py  latex.py  mediawiki.py  orgmode.py  pandoc.py  rst.py  textile.py
star/tts/: __init__.py  applesay.py  audio.py  base.py  coqui.py  dectalk.py  espeak.py  exporters.py  festival.py  manager.py  piper.py  piper_models.py  pyttsx3.py  qtspeech.py  silent.py  subtitles.py
star/tts/cloud/: __init__.py  base.py  elevenlabs.py  mock.py
star/tts/manager/: __init__.py  _export.py  _playback.py  _screader.py  _selection.py
star/ttstext/: __init__.py  abbreviations.py  markdown.py  mathspeech.py  numbers.py  pipeline.py  ssml.py  tables.py
star/tui/: __init__.py  _screen.py  app.py  mixin_annotations.py  mixin_bookmarks.py  mixin_caret.py  mixin_commands.py  mixin_display.py  mixin_docops.py  mixin_document.py  mixin_draw.py  mixin_editing.py  mixin_export.py  mixin_graph.py  mixin_help.py  mixin_keys.py  mixin_navigation.py  mixin_playback.py  mixin_rsvp.py  mixin_search.py  mixin_speechcursor.py  mixin_transcription.py  mixin_voice.py  text.py  theming.py
tests/: conftest.py  test_a11y_announce.py  test_accessibility.py  test_archive.py  test_audiobook.py  test_authoring.py  test_authoring_depth.py  test_autodeps.py  test_bg_thread_lifecycle.py  test_citations.py  test_cloud_tts.py  test_convert.py  test_dependencies.py  test_deps_dialog.py  test_dictionary.py  test_doc_fidelity.py  test_documents.py  test_examples_smoke.py  test_export.py  test_features.py  test_fonts.py  test_frozen_build.py  test_fulltext.py  test_graph.py  test_gui_display.py  test_gui_doctools.py  test_gui_import_flow.py  test_gui_interactive.py  test_gui_presets_dialogs.py  test_gui_smoke.py  test_gui_toolbar.py  test_gui_workflows.py  test_highlight_pacing.py  test_highlights_pagination.py  test_history.py  test_i18n.py  test_i18n_catalog.py  test_import_smoke.py  test_library.py  test_loaders_property.py  (+44 more)
tools/: build-appimage-docker.sh  build-appimage.sh  build-macos.sh  build-nsis.ps1  build-vendor.py  build-windows.ps1  ci-pytest.sh  install.ps1  install.sh  install_native.py  rthook_star.py  split_star.py  zipapp_bootstrap.py
