[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "star-reader"
version = "0.1.8rc2"
description = "star — Speaking Terminal Access Reader: an accessible document reader with built-in text-to-speech"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Jon Pielaet" }]
keywords = [
    "accessibility",
    "text-to-speech",
    "tts",
    "screen-reader",
    "document-reader",
    "braille",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Adaptive Technologies",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

# Backbone of the experience (the "recommended" profile from install.sh):
# the Qt GUI, cross-platform TTS, and the most common document loaders.
# Everything else is optional and guarded at import time, so it lives in the
# extras below.
dependencies = [
    "PyQt6",
    "pyttsx3",
    "pdfminer.six",
    "python-docx",
    "python-pptx",
    # pyttsx3's macOS driver needs pyobjc to drive NSSpeechSynthesizer.
    "pyobjc; sys_platform == 'darwin'",
    # curses is stdlib on Linux/macOS, but on Windows the underlying _curses C
    # extension ships only via windows-curses.  Declaring it here lets a plain
    # `pip install` of the wheel import and run on Windows; without it, the
    # import is still guarded (the Qt GUI works, only the --tui mode is lost).
    "windows-curses; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/leavesofgrass/star"
Repository = "https://github.com/leavesofgrass/star"
Changelog = "https://github.com/leavesofgrass/star/blob/main/star/CHANGELOG.md"
Issues = "https://github.com/leavesofgrass/star/issues"

[project.optional-dependencies]
ocr = ["pytesseract", "pymupdf", "Pillow"]
formats = ["odfpy", "openpyxl"]
markup = ["pypandoc"]
braille = ["louis"]
audio = ["pydub"]
transcribe = ["openai-whisper", "sounddevice", "numpy"]
# Extractive document summarization (Tools ▸ Summarize Document) via sumy.
summarize = ["sumy"]
# Anki flashcard export (File ▸ Export ▸ Anki Flashcards) via genanki.
flashcards = ["genanki"]
# Spell checking in edit mode (Edit ▸ Check Spelling) via pyspellchecker.
spellcheck = ["pyspellchecker"]
# Translate the document into another language (Tools ▸ Translate Document).
translate = ["deep-translator"]
# Read RSS / Atom feeds and open an article (File ▸ Open Feed) via feedparser.
feeds = ["feedparser"]
# Highlight uncommon / academic vocabulary (View ▸ Reading Aids ▸ Highlight
# Difficult Words) via wordfreq.
vocab = ["wordfreq"]
# Hot-folder watching (star --watch) uses watchdog for real filesystem events.
# It lives in its own lightweight group because it is only needed for that one
# headless feature; star falls back to directory polling when it is absent.
watch = ["watchdog"]
# Test tooling (no test dependencies existed before the batch/watch features).
test = ["pytest"]
all = [
    "pytesseract",
    "pymupdf",
    "Pillow",
    "odfpy",
    "openpyxl",
    "pypandoc",
    "louis",
    "pydub",
    "watchdog",
    "sumy",
    "genanki",
    "pyspellchecker",
    "deep-translator",
    "feedparser",
    "wordfreq",
]

[project.scripts]
star = "star.app:main"

[tool.setuptools.packages.find]
include = ["star*"]

[tool.setuptools.package-data]
star = ["README.md", "LICENSE", "CHANGELOG.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
# ruff honours .gitignore, so the vendored/build/venv trees are skipped.

[tool.ruff.lint]
# star deliberately uses `from ._runtime import *` as a shared-import hub, which
# trips the star-import checks (F403/F405).  Line length (E501) is enforced by
# convention/review rather than the (currently non-blocking) lint gate.
ignore = ["F403", "F405", "E501"]

[tool.ruff.lint.per-file-ignores]
# _runtime.py is the shared-import hub: it imports stdlib + optional packages
# and re-exports them to every module via a dynamically-built __all__, which
# ruff cannot see statically, so every re-export looks like an unused import.
"star/_runtime.py" = ["F401"]
