# Packaging: the pure-Python wheel (py3-none-any) is the primary, stable
# distribution artifact.  `python -m build` produces the wheel + sdist, which CI
# publishes to PyPI.  The self-contained Windows star.exe is a deprecated manual
# fallback only (see star/BUILD.md and tools/build-windows.ps1).
[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "star-reader"
version = "0.1.17"
description = "star — Speaking Terminal Access Reader: an accessible document reader with built-in text-to-speech"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Jon Pielaet" }]
keywords = [
    "accessibility",
    "text-to-speech",
    "tts",
    "screen-reader",
    "document-reader",
    "braille",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Adaptive Technologies",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

# Backbone of the experience (the "recommended" profile from install.sh):
# the Qt GUI, cross-platform TTS, and the most common document loaders.
# Everything else is optional and guarded at import time, so it lives in the
# extras below.
dependencies = [
    "PyQt6",
    "pyttsx3",
    "pdfminer.six",
    "python-docx",
    "python-pptx",
    # pyttsx3's macOS driver needs pyobjc to drive NSSpeechSynthesizer.
    "pyobjc; sys_platform == 'darwin'",
    # curses is stdlib on Linux/macOS, but on Windows the underlying _curses C
    # extension ships only via windows-curses.  Declaring it here lets a plain
    # `pip install` of the wheel import and run on Windows; without it, the
    # import is still guarded (the Qt GUI works, only the --tui mode is lost).
    "windows-curses; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/leavesofgrass/star"
Repository = "https://github.com/leavesofgrass/star"
Changelog = "https://github.com/leavesofgrass/star/blob/main/star/CHANGELOG.md"
Issues = "https://github.com/leavesofgrass/star/issues"

[project.optional-dependencies]
ocr = ["pytesseract", "pymupdf", "Pillow"]
formats = ["odfpy", "openpyxl"]
markup = ["pypandoc"]
braille = ["louis"]
audio = ["pydub"]
transcribe = ["openai-whisper", "sounddevice", "numpy"]
# Extractive document summarization (Tools ▸ Summarize Document) via sumy.
summarize = ["sumy"]
# Anki flashcard export (File ▸ Export ▸ Anki Flashcards) via genanki.
flashcards = ["genanki"]
# Spell checking in edit mode (Edit ▸ Check Spelling) via pyspellchecker.
spellcheck = ["pyspellchecker"]
# Translate the document into another language (Tools ▸ Translate Document).
translate = ["deep-translator"]
# Read RSS / Atom feeds and open an article (File ▸ Open Feed) via feedparser.
feeds = ["feedparser"]
# Highlight uncommon / academic vocabulary (View ▸ Reading Aids ▸ Highlight
# Difficult Words) via wordfreq.
vocab = ["wordfreq"]
# Offline word definitions (View ▸ Reading Aids ▸ Define Word) via WordNet.  Needs
# nltk plus a one-time corpus download:
#   python -m nltk.downloader wordnet omw-1.4 cmudict
dictionary = ["nltk"]
# Hot-folder watching (star --watch) uses watchdog for real filesystem events.
# It lives in its own lightweight group because it is only needed for that one
# headless feature; star falls back to directory polling when it is absent.
watch = ["watchdog"]
# Knowledge graph & Obsidian: nicer graph layout/SVG (graphviz needs its system
# binary too), PlantUML rendering, and richer YAML front matter for vault import.
# All optional — the graph works with a pure-Python layout and a built-in front-
# matter parser when these are absent.
graph = ["graphviz", "plantuml", "pyyaml"]
# Named-entity concept extraction for the knowledge graph.  Heavier and spaCy
# also needs a language model (python -m spacy download en_core_web_sm), so it is
# its own group and is not pulled in by `all`; the regex fallback covers the rest.
ner = ["spacy", "nltk"]
# Archive ingestion: .7z and .rar support (ZIP and TAR are stdlib and always work).
archive = ["py7zr", "rarfile"]
# Video export: Pillow fallback renderer for karaoke MP4 export when Qt is absent.
# Qt (PyQt6, already in the base dependencies) is the preferred renderer; Pillow
# is only needed as a fallback.  ffmpeg must also be on PATH.
video = ["Pillow"]
# Test tooling (no test dependencies existed before the batch/watch features).
# pytest-cov powers the per-module coverage gate on tts.py (see the `coverage`
# CI job and [tool.coverage] below); plain `pytest` ignores it when --cov is
# not passed, so the matrix legs are unaffected.
test = ["pytest", "pytest-cov"]
all = [
    "pytesseract",
    "pymupdf",
    "Pillow",
    "odfpy",
    "openpyxl",
    "pypandoc",
    "louis",
    "pydub",
    "watchdog",
    "sumy",
    "genanki",
    "pyspellchecker",
    "deep-translator",
    "feedparser",
    "wordfreq",
    "nltk",
    "graphviz",
    "plantuml",
    "pyyaml",
    "py7zr",
    "rarfile",
]

[project.scripts]
star = "star.app:main"

# ── Plugin entry-points ────────────────────────────────────────────────────────
# Built-in implementations register here so that PluginRegistry can discover
# them via importlib.metadata.entry_points().  Third-party packages add their
# own entry-points in the same groups.

[project.entry-points."star.backends"]
silent     = "star.tts.silent:SilentBackend"
pyttsx3    = "star.tts.pyttsx3:Pyttsx3Backend"
applesay   = "star.tts.applesay:AppleSayBackend"
espeak     = "star.tts.espeak:ESpeakBackend"
espeaklib  = "star.tts.espeak:ESpeakLibBackend"
festival   = "star.tts.festival:FestivalBackend"
piper      = "star.tts.piper:PiperBackend"
coqui      = "star.tts.coqui:CoquiBackend"
dectalk    = "star.tts.dectalk:DECtalkBackend"
dectalkdll = "star.tts.dectalk:DECtalkDLLBackend"

[project.entry-points."star.formats"]
pdf      = "star.documents.handlers:PDFHandler"
epub     = "star.documents.handlers:EPUBHandler"
docx     = "star.documents.handlers:DocxHandler"
odt      = "star.documents.handlers:ODTHandler"
pptx     = "star.documents.handlers:PPTXHandler"
xlsx     = "star.documents.handlers:XLSXHandler"
html     = "star.documents.handlers:HTMLHandler"
markdown = "star.documents.handlers:MarkdownHandler"
txt      = "star.documents.handlers:PlainTextHandler"
rst      = "star.documents.handlers:RSTHandler"
org      = "star.documents.handlers:OrgHandler"
pandoc   = "star.documents.handlers:PandocHandler"

[project.entry-points."star.exporters"]
anki     = "star.flashcards:AnkiExporter"
markdown = "star.export:MarkdownExporter"
html     = "star.export:HTMLExporter"
epub     = "star.export:EPUBExporter"
wav      = "star.tts.exporters:WAVExporter"
mp4      = "star.video:MP4Exporter"

[tool.setuptools.packages.find]
include = ["star*"]

[tool.setuptools.package-data]
star = ["README.md", "LICENSE", "CHANGELOG.md", "welcome.md", "locale/*.json", "locale/README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["."]

# Coverage is opt-in (the `coverage` CI job passes --cov), so the default test
# run stays fast and dependency-light.  The gate enforces a per-module floor on
# the largest modules (tts.py, documents.py) via `coverage report --include=…
# --fail-under` — set just below each achievable line rate (much of the engine /
# loader bodies need a real device or files and stay uncovered) and ratcheted up
# as the pure logic gains direct tests.
[tool.coverage.run]
branch = false

[tool.coverage.report]
# The unreachable/guard lines that should never count against the gate.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# ruff honours .gitignore, so the vendored/build/venv trees are skipped.

[tool.ruff.lint]
# star deliberately uses `from ._runtime import *` as a shared-import hub, which
# trips the star-import checks (F403/F405).  Line length (E501) is enforced by
# convention/review rather than the (currently non-blocking) lint gate.
ignore = ["F403", "F405", "E501"]

[tool.ruff.lint.per-file-ignores]
# _runtime.py is the shared-import hub: it imports stdlib + optional packages
# and re-exports them to every module via a dynamically-built __all__, which
# ruff cannot see statically, so every re-export looks like an unused import.
"star/_runtime.py" = ["F401"]
