# Packaging: the pure-Python wheel (py3-none-any) is the primary, stable
# distribution artifact — installing via pip/pipx is the recommended route.
# `python -m build` produces the wheel + sdist, which CI publishes to PyPI.  The
# self-contained Windows star.exe is a supported release artifact, built on
# every v* tag and attached to the GitHub Release (see star/BUILD.md and
# tools/build-windows.ps1).
[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "star-reader"
version = "0.1.28"
description = "star — Speaking Terminal Access Reader: accessible study tools for reading and writing, with built-in text-to-speech"
readme = "README.md"
requires-python = ">=3.11"
license = "GPL-3.0-or-later"
license-files = ["LICENSE"]
authors = [{ name = "Jon Pielaet" }]
keywords = [
    "accessibility",
    "text-to-speech",
    "tts",
    "screen-reader",
    "document-reader",
    "braille",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console :: Curses",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: End Users/Desktop",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Topic :: Adaptive Technologies",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
]

# Backbone of the experience (the "recommended" profile from install.sh):
# the Qt GUI, cross-platform TTS, and the most common document loaders.
# Everything else is optional and guarded at import time, so it lives in the
# extras below.
dependencies = [
    "PyQt6",
    "pyttsx3",
    "pdfminer.six",
    "python-docx",
    "python-pptx",
    # pyttsx3's macOS driver needs pyobjc to drive NSSpeechSynthesizer.
    "pyobjc; sys_platform == 'darwin'",
    # curses is stdlib on Linux/macOS, but on Windows the underlying _curses C
    # extension ships only via windows-curses.  Declaring it here lets a plain
    # `pip install` of the wheel import and run on Windows; without it, the
    # import is still guarded (the Qt GUI works, only the --tui mode is lost).
    "windows-curses; sys_platform == 'win32'",
]

[project.urls]
Homepage = "https://github.com/leavesofgrass/star"
Repository = "https://github.com/leavesofgrass/star"
Changelog = "https://github.com/leavesofgrass/star/blob/main/star/CHANGELOG.md"
Issues = "https://github.com/leavesofgrass/star/issues"

[project.optional-dependencies]
ocr = ["pytesseract", "pymupdf", "Pillow"]
formats = ["odfpy", "openpyxl"]
markup = ["pypandoc"]
braille = ["louis"]
audio = ["pydub"]
transcribe = ["faster-whisper", "sounddevice", "numpy"]
# Extractive document summarization (Tools ▸ Summarize Document) via sumy.
summarize = ["sumy"]
# Syllable splitting decoding aid (View ▸ Reading Aids ▸ Syllable Splitting) via
# pyphen — pure-Python hyphenation, offline.
syllables = ["pyphen"]
# Anki flashcard export (File ▸ Export ▸ Anki Flashcards) via genanki.
flashcards = ["genanki"]
# Spell checking in edit mode (Edit ▸ Check Spelling) via pyspellchecker.
spellcheck = ["pyspellchecker"]
# Translate the document into another language (Tools ▸ Translate Document).
translate = ["deep-translator"]
# Read RSS / Atom feeds and open an article (File ▸ Open Feed) via feedparser.
feeds = ["feedparser"]
# Highlight uncommon / academic vocabulary (View ▸ Reading Aids ▸ Highlight
# Difficult Words) via wordfreq.
vocab = ["wordfreq"]
# Offline word definitions (View ▸ Reading Aids ▸ Define Word) via WordNet.  Needs
# nltk plus a one-time corpus download:
#   python -m nltk.downloader wordnet omw-1.4 cmudict
dictionary = ["nltk"]
# Hot-folder watching (star --watch) uses watchdog for real filesystem events.
# It lives in its own lightweight group because it is only needed for that one
# headless feature; star falls back to directory polling when it is absent.
watch = ["watchdog"]
# System clipboard copy in the TUI via pyperclip.  Optional — an OSC-52 terminal
# escape and a status-line fallback are used when it is absent.
clipboard = ["pyperclip"]
# Knowledge graph & Obsidian: nicer graph layout/SVG (graphviz needs its system
# binary too), PlantUML rendering, and richer YAML front matter for vault import.
# All optional — the graph works with a pure-Python layout and a built-in front-
# matter parser when these are absent.
graph = ["graphviz", "plantuml", "pyyaml"]
# Named-entity concept extraction for the knowledge graph.  Heavier and spaCy
# also needs a language model (python -m spacy download en_core_web_sm), so it is
# its own group and is not pulled in by `all`; the regex fallback covers the rest.
ner = ["spacy", "nltk"]
# Archive ingestion: .7z and .rar support (ZIP and TAR are stdlib and always work).
archive = ["py7zr", "rarfile"]
# Video export: Pillow fallback renderer for karaoke MP4 export when Qt is absent.
# Qt (PyQt6, already in the base dependencies) is the preferred renderer; Pillow
# is only needed as a fallback.  ffmpeg must also be on PATH.
video = ["Pillow"]
# Test tooling (no test dependencies existed before the batch/watch features).
# pytest-cov powers the per-module coverage gate on tts.py (see the `coverage`
# CI job and [tool.coverage] below); plain `pytest` ignores it when --cov is
# not passed, so the matrix legs are unaffected.  pytest-qt (qtbot) drives the
# interactive/end-to-end Qt GUI tests and hypothesis powers the loader property
# tests; both are pure-Python wheels, so the base matrix legs pick them up too
# and simply skip the Qt-guarded modules when PyQt is somehow absent.
# pytest-xdist parallelizes the suite (~3× faster); the addopts below pin
# every Qt test to one worker while the non-GUI bulk fans out across the rest.
# (The exit-139 teardown flake itself was root-caused to stale sip wrappers
# and is fixed by the wrapper sweep in tests/conftest.py.)
test = ["pytest", "pytest-cov", "pytest-qt", "pytest-xdist", "hypothesis"]
all = [
    "pytesseract",
    "pymupdf",
    "Pillow",
    "odfpy",
    "openpyxl",
    "pypandoc",
    "louis",
    "pydub",
    "watchdog",
    "pyperclip",
    "sumy",
    "pyphen",
    "genanki",
    "pyspellchecker",
    "deep-translator",
    "feedparser",
    "wordfreq",
    "nltk",
    "graphviz",
    "plantuml",
    "pyyaml",
    "py7zr",
    "rarfile",
    # Speech-to-text dictation ([transcribe]).  Included since faster-whisper
    # replaced openai-whisper/PyTorch (0.1.25): the CTranslate2 stack is
    # ~150 MB, small enough for the batteries-included install.  Coqui TTS and
    # [ner] (spaCy + language model) remain the only groups outside `all`.
    "faster-whisper",
    "sounddevice",
    "numpy",
]

[project.scripts]
star = "star.app:main"

# ── Plugin entry-points ────────────────────────────────────────────────────────
# Built-in implementations register here so that PluginRegistry can discover
# them via importlib.metadata.entry_points().  Third-party packages add their
# own entry-points in the same groups.

[project.entry-points."star.backends"]
silent     = "star.tts.silent:SilentBackend"
pyttsx3    = "star.tts.pyttsx3:Pyttsx3Backend"
applesay   = "star.tts.applesay:AppleSayBackend"
espeak     = "star.tts.espeak:ESpeakBackend"
espeaklib  = "star.tts.espeak:ESpeakLibBackend"
festival   = "star.tts.festival:FestivalBackend"
piper      = "star.tts.piper:PiperBackend"
coqui      = "star.tts.coqui:CoquiBackend"
dectalk    = "star.tts.dectalk:DECtalkBackend"
dectalkdll = "star.tts.dectalk:DECtalkDLLBackend"
elevenlabs = "star.tts.cloud.elevenlabs:ElevenLabsBackend"
# NOTE: qtspeech (Qt-native system voices) is intentionally NOT registered yet —
# deferred until its audio output is verified on real Windows/macOS/Linux
# hardware.  At priority 35 it displaced the reliable pyttsx3/SAPI default in
# auto-selection while producing no audible output.  star/tts/qtspeech.py and its
# tests remain in the tree for a future release.

[project.entry-points."star.formats"]
pdf      = "star.documents.handlers:PDFHandler"
epub     = "star.documents.handlers:EPUBHandler"
docx     = "star.documents.handlers:DocxHandler"
odt      = "star.documents.handlers:ODTHandler"
pptx     = "star.documents.handlers:PPTXHandler"
xlsx     = "star.documents.handlers:XLSXHandler"
html     = "star.documents.handlers:HTMLHandler"
markdown = "star.documents.handlers:MarkdownHandler"
txt      = "star.documents.handlers:PlainTextHandler"
rst      = "star.documents.handlers:RSTHandler"
org      = "star.documents.handlers:OrgHandler"
pandoc   = "star.documents.handlers:PandocHandler"

[project.entry-points."star.exporters"]
anki     = "star.flashcards:AnkiExporter"
markdown = "star.export:MarkdownExporter"
html     = "star.export:HTMLExporter"
epub     = "star.export:EPUBExporter"
wav      = "star.tts.exporters:WAVExporter"
mp4      = "star.video:MP4Exporter"
m4b      = "star.tts.exporters:M4BExporter"

[tool.setuptools.packages.find]
include = ["star*"]

[tool.setuptools.package-data]
star = ["README.md", "LICENSE", "CHANGELOG.md", "welcome.md", "locale/*.json", "locale/README.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
# -n auto  → run across all cores (pytest-xdist).
# --dist loadgroup → keep xdist_group("qt") tests (all the GUI tests, grouped
#   in tests/conftest.py) together on ONE worker so they run in their serial
#   order; the non-GUI tests fan out across the other workers (the ~3× win).
#   The historical probabilistic teardown segfault in this suite was
#   root-caused (2026-07-17) to stale sip wrappers surviving window
#   destruction and is fixed by the wrapper sweep in tests/conftest.py
#   (validated 40/40 on both the Linux and Windows reproducers) — a plain
#   `pytest` needs no special invocation.  The `qt` marker remains for
#   targeted runs (`pytest -m qt -n0` was the reproducer that cracked it).
#   Escape hatch for single-test runs / debugging:  pytest -n0 <target>
addopts = "-q -n auto --dist loadgroup"
# Hang DIAGNOSTICS: any single test stuck for 2 minutes dumps every thread's
# traceback to stderr (pytest's built-in faulthandler — a dump, not a kill).
# The actual KILL for a wedged run is the wall-clock `timeout` in
# tools/ci-pytest.sh: it bounds pytest to STAR_PYTEST_TIMEOUT (480 s) and retries
# the flaky Qt-teardown hang, catching even the xdist-controller shutdown wedge
# that faulthandler can't see (it's outside any test).  The suite finishes whole
# in ~30 s, so a faulthandler trigger here IS the bug.
faulthandler_timeout = 120
pythonpath = ["."]
markers = [
    "network: test requires network access (may be skipped offline)",
    "qt: touches Qt (added automatically in tests/conftest.py); CI runs these serially in-process via `pytest -m qt -n0`",
]

# Coverage is opt-in (the `coverage` CI job passes --cov), so the default test
# run stays fast and dependency-light.  The gate enforces a per-module floor on
# the largest modules (tts.py, documents.py) via `coverage report --include=…
# --fail-under` — set just below each achievable line rate (much of the engine /
# loader bodies need a real device or files and stay uncovered) and ratcheted up
# as the pure logic gains direct tests.
[tool.coverage.run]
branch = false

[tool.coverage.report]
# The unreachable/guard lines that should never count against the gate.
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 100
target-version = "py311"
# ruff honours .gitignore, so the vendored/build/venv trees are skipped.

[tool.ruff.lint]
# star deliberately uses `from ._runtime import *` as a shared-import hub, which
# trips the star-import checks (F403/F405).  Line length (E501) is enforced by
# convention/review rather than the (currently non-blocking) lint gate.
ignore = ["F403", "F405", "E501"]

[tool.ruff.lint.per-file-ignores]
# _runtime.py is the shared-import hub: it imports stdlib + optional packages
# and re-exports them to every module via a dynamically-built __all__, which
# ruff cannot see statically, so every re-export looks like an unused import.
"star/_runtime.py" = ["F401"]
